--- a/public/assets/css/interaction.css
+++ b/public/assets/css/interaction.css
@@ -7,7 +7,8 @@
 }
 
 .hide {
-  display: none;
+  position: absolute;
+  opacity: 0;
   z-index: -1;
 }
 
@@ -21,11 +22,9 @@
   color: white;
   position: absolute;
   font-size: 150px;
-}
-
-.overlay>ion-icon {
   animation: growing 0.3s ease;
 }
+
 
 @keyframes growing {
   0% {
