Fix code smells

--- a/public/assets/css/interaction.css
+++ b/public/assets/css/interaction.css
@@ -27,11 +27,11 @@
 
 
 @keyframes growing {
-  0% {
+  from {
     transform: scale(0.2);
   }
 
-  100% {
+  to {
     transform: scale(1);
   }
 }
