--- a/public/assets/css/interaction.css
+++ b/public/assets/css/interaction.css
@@ -6,32 +6,33 @@
   color: red;
 }
 
-.hide {
+.hide>ion-icon {
   position: absolute;
   opacity: 0;
   z-index: -1;
 }
 
-.overlay {
-  width: 100%;
-  height: 100%;
+.overlay>ion-icon {
   display: flex;
   justify-content: center;
   align-items: center;
   z-index: 1;
   color: white;
   position: absolute;
-  font-size: 250px;
+  font-size: 200px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   animation: growing 0.3s ease;
 }
 
 
 @keyframes growing {
-  from {
-    transform: scale(0.2);
+  0% {
+    transform: translate(-50%, -50%) scale(0.2);
   }
 
-  to {
-    transform: scale(1);
+  100% {
+    transform: translate(-50%, -50%) scale(1);
   }
 }
