--- a/public/assets/css/interaction.css
+++ b/public/assets/css/interaction.css
@@ -23,8 +23,8 @@
 
 .overlay>ion-icon {
   z-index: 1;
-  animation: growing 0.3s ease;
-  transform: translate(-50%, -50%) scale(1);
+  animation: growing 300ms ease;
+  transform: translate(-50%, -50%);
 }
 
 
