--- a/assets/css/interaction.css
+++ b/assets/css/interaction.css
@@ -12,18 +12,19 @@
   z-index: -1;
 }
 
-.overlay>ion-icon {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 1;
-  color: white;
+.conteudo>ion-icon {
   position: absolute;
-  font-size: 200px;
+  color: white;
   top: 50%;
   left: 50%;
+  transform: translate(-50%, -50%) scale(0.2);
+  font-size: 200px;
+}
+
+.overlay>ion-icon {
+  z-index: 1;
+  animation: growing 300ms ease;
   transform: translate(-50%, -50%);
-  animation: growing 0.3s ease;
 }
 
 
